* Save command did not warn of existence of a message with a deleted     attachment in an aggregate save, unless cursor was positioned on a message with     a deleted attachment. Reported by Florian Herzig.
  * Rewrite of configure script: ldap is checked for after ssl, which is checked
    after crypto, which is checked for after dl library. Set defaults for include
    and lib directories based on SSLDIR. Joint work with Florian Herzig.

  * Update contact information (remove alpine-contact@u.washington.edu and
    add chappa@gmx.com)

--- a/po/alpine.pot
+++ b/po/alpine.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: alpine-contact@u.washington.edu\n"
+"Report-Msgid-Bugs-To: chappa@gmx.com\n"
 "POT-Creation-Date: 2008-06-03 12:14-0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
