--- a/web/src/cgi.tcl-1.10/README.UW
+++ b/web/src/cgi.tcl-1.10/README.UW
@@ -20,4 +20,4 @@ PATCH.UW, amount to a few things:
       newlines
 
 For comments or questions regarding the Web Alpine application
-send comments to <alpine-contact@cac.washington.edu>
+send comments to <chappa@gmx.com>
