--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -5463,21 +5463,23 @@ m4trace:configure.ac:583: -1- m4_pattern_allow([^DF_DEFAULT_PRINTER$])
 m4trace:configure.ac:623: -1- m4_pattern_allow([^PASSFILE$])
 m4trace:configure.ac:627: -1- m4_pattern_allow([^DF_SSHPATH$])
 m4trace:configure.ac:642: -1- m4_pattern_allow([^DF_SSHCMD$])
-m4trace:configure.ac:999: -1- m4_pattern_allow([^OSX_TARGET$])
-m4trace:configure.ac:1004: -1- m4_pattern_allow([^APPLEKEYCHAIN$])
-m4trace:configure.ac:1036: -1- m4_pattern_allow([^__EXTENSIONS__$])
-m4trace:configure.ac:1167: -1- m4_pattern_allow([^_WINDOWS$])
-m4trace:configure.ac:1242: -1- m4_pattern_allow([^HAS_TERMINFO$])
-m4trace:configure.ac:1245: -1- m4_pattern_allow([^HAS_TERMCAP$])
-m4trace:configure.ac:1269: -1- m4_pattern_allow([^ENABLE_LDAP$])
-m4trace:configure.ac:1274: -1- m4_pattern_allow([^LDAP_DEPRECATED$])
-m4trace:configure.ac:1438: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2777: AC_CHECK_FILE is expanded from...
+m4trace:configure.ac:1035: -1- m4_pattern_allow([^OSX_TARGET$])
+m4trace:configure.ac:1040: -1- m4_pattern_allow([^APPLEKEYCHAIN$])
+m4trace:configure.ac:1072: -1- m4_pattern_allow([^__EXTENSIONS__$])
+m4trace:configure.ac:1178: -1- m4_pattern_allow([^_WINDOWS$])
+m4trace:configure.ac:1253: -1- m4_pattern_allow([^HAS_TERMINFO$])
+m4trace:configure.ac:1256: -1- m4_pattern_allow([^HAS_TERMCAP$])
+m4trace:configure.ac:1286: -1- _m4_warn([cross], [AC_RUN_IFELSE called without default to allow cross compiling], [../../lib/autoconf/general.m4:2748: AC_RUN_IFELSE is expanded from...
+configure.ac:1286: the top level])
+m4trace:configure.ac:1328: -1- m4_pattern_allow([^ENABLE_LDAP$])
+m4trace:configure.ac:1333: -1- m4_pattern_allow([^LDAP_DEPRECATED$])
+m4trace:configure.ac:1442: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2777: AC_CHECK_FILE is expanded from...
 ../../lib/m4sugar/m4sh.m4:639: AS_IF is expanded from...
 ../../lib/autoconf/headers.m4:129: _AC_CHECK_HEADER_MONGREL is expanded from...
 ../../lib/autoconf/headers.m4:67: AC_CHECK_HEADER is expanded from...
-configure.ac:1438: the top level])
-m4trace:configure.ac:1484: -1- m4_pattern_allow([^HAVE_REGEX_H$])
-m4trace:configure.ac:1493: -1- ACX_PTHREAD([
+configure.ac:1442: the top level])
+m4trace:configure.ac:1488: -1- m4_pattern_allow([^HAVE_REGEX_H$])
+m4trace:configure.ac:1497: -1- ACX_PTHREAD([
       AC_MSG_RESULT([yes])
       case "$target" in
 	  *openbsd*)
@@ -5492,111 +5494,111 @@ m4trace:configure.ac:1493: -1- ACX_PTHREAD([
     ], [
       AC_MSG_RESULT([no])
     ])
-m4trace:configure.ac:1493: -1- _m4_warn([obsolete], [The macro `AC_LANG_SAVE' is obsolete.
+m4trace:configure.ac:1497: -1- _m4_warn([obsolete], [The macro `AC_LANG_SAVE' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/lang.m4:125: AC_LANG_SAVE is expanded from...
 m4/acx_pthread.m4:49: ACX_PTHREAD is expanded from...
-configure.ac:1493: the top level])
-m4trace:configure.ac:1493: -1- _m4_warn([obsolete], [The macro `AC_LANG_C' is obsolete.
+configure.ac:1497: the top level])
+m4trace:configure.ac:1497: -1- _m4_warn([obsolete], [The macro `AC_LANG_C' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/c.m4:72: AC_LANG_C is expanded from...
 m4/acx_pthread.m4:49: ACX_PTHREAD is expanded from...
-configure.ac:1493: the top level])
-m4trace:configure.ac:1493: -1- m4_pattern_allow([^acx_pthread_config$])
-m4trace:configure.ac:1493: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
+configure.ac:1497: the top level])
+m4trace:configure.ac:1497: -1- m4_pattern_allow([^acx_pthread_config$])
+m4trace:configure.ac:1497: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:2687: AC_TRY_LINK is expanded from...
 m4/acx_pthread.m4:49: ACX_PTHREAD is expanded from...
-configure.ac:1493: the top level])
-m4trace:configure.ac:1493: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
+configure.ac:1497: the top level])
+m4trace:configure.ac:1497: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:2687: AC_TRY_LINK is expanded from...
 m4/acx_pthread.m4:49: ACX_PTHREAD is expanded from...
-configure.ac:1493: the top level])
-m4trace:configure.ac:1493: -1- m4_pattern_allow([^PTHREAD_CREATE_JOINABLE$])
-m4trace:configure.ac:1493: -1- m4_pattern_allow([^PTHREAD_CC$])
-m4trace:configure.ac:1493: -1- m4_pattern_allow([^PTHREAD_LIBS$])
-m4trace:configure.ac:1493: -1- m4_pattern_allow([^PTHREAD_CFLAGS$])
-m4trace:configure.ac:1493: -1- m4_pattern_allow([^PTHREAD_CC$])
-m4trace:configure.ac:1493: -2- m4_pattern_allow([^HAVE_PTHREAD$])
-m4trace:configure.ac:1493: -1- m4_pattern_allow([^HAVE_PTHREAD$])
-m4trace:configure.ac:1493: -1- _m4_warn([obsolete], [The macro `AC_LANG_RESTORE' is obsolete.
+configure.ac:1497: the top level])
+m4trace:configure.ac:1497: -1- m4_pattern_allow([^PTHREAD_CREATE_JOINABLE$])
+m4trace:configure.ac:1497: -1- m4_pattern_allow([^PTHREAD_CC$])
+m4trace:configure.ac:1497: -1- m4_pattern_allow([^PTHREAD_LIBS$])
+m4trace:configure.ac:1497: -1- m4_pattern_allow([^PTHREAD_CFLAGS$])
+m4trace:configure.ac:1497: -1- m4_pattern_allow([^PTHREAD_CC$])
+m4trace:configure.ac:1497: -2- m4_pattern_allow([^HAVE_PTHREAD$])
+m4trace:configure.ac:1497: -1- m4_pattern_allow([^HAVE_PTHREAD$])
+m4trace:configure.ac:1497: -1- _m4_warn([obsolete], [The macro `AC_LANG_RESTORE' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/lang.m4:134: AC_LANG_RESTORE is expanded from...
 m4/acx_pthread.m4:49: ACX_PTHREAD is expanded from...
-configure.ac:1493: the top level])
-m4trace:configure.ac:1511: -1- m4_pattern_allow([^HAVE_NANOSLEEP$])
-m4trace:configure.ac:1521: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.ac:1523: -1- m4_pattern_allow([^STAT_MACROS_BROKEN$])
-m4trace:configure.ac:1524: -1- m4_pattern_allow([^HAVE_SYS_WAIT_H$])
-m4trace:configure.ac:1525: -1- m4_pattern_allow([^TIME_WITH_SYS_TIME$])
-m4trace:configure.ac:1526: -1- m4_pattern_allow([^GWINSZ_IN_SYS_IOCTL$])
-m4trace:configure.ac:1528: -1- m4_pattern_allow([^HAVE_UNISTD_H$])
-m4trace:configure.ac:1557: -2- m4_pattern_allow([^HAS_TERMIOS$])
-m4trace:configure.ac:1556: -2- m4_pattern_allow([^HAS_TERMIO$])
-m4trace:configure.ac:1556: -2- m4_pattern_allow([^HAS_SGTTY$])
-m4trace:configure.ac:1573: -1- _m4_warn([obsolete], [your code may safely assume C89 semantics that RETSIGTYPE is void.
+configure.ac:1497: the top level])
+m4trace:configure.ac:1515: -1- m4_pattern_allow([^HAVE_NANOSLEEP$])
+m4trace:configure.ac:1525: -1- m4_pattern_allow([^STDC_HEADERS$])
+m4trace:configure.ac:1527: -1- m4_pattern_allow([^STAT_MACROS_BROKEN$])
+m4trace:configure.ac:1528: -1- m4_pattern_allow([^HAVE_SYS_WAIT_H$])
+m4trace:configure.ac:1529: -1- m4_pattern_allow([^TIME_WITH_SYS_TIME$])
+m4trace:configure.ac:1530: -1- m4_pattern_allow([^GWINSZ_IN_SYS_IOCTL$])
+m4trace:configure.ac:1532: -1- m4_pattern_allow([^HAVE_UNISTD_H$])
+m4trace:configure.ac:1561: -2- m4_pattern_allow([^HAS_TERMIOS$])
+m4trace:configure.ac:1560: -2- m4_pattern_allow([^HAS_TERMIO$])
+m4trace:configure.ac:1560: -2- m4_pattern_allow([^HAS_SGTTY$])
+m4trace:configure.ac:1577: -1- _m4_warn([obsolete], [your code may safely assume C89 semantics that RETSIGTYPE is void.
 Remove this warning and the `AC_CACHE_CHECK' when you adjust the code.], [])
-m4trace:configure.ac:1582: -1- m4_pattern_allow([^RETSIGTYPE$])
-m4trace:configure.ac:1585: -1- m4_pattern_allow([^size_t$])
-m4trace:configure.ac:1586: -1- m4_pattern_allow([^mode_t$])
-m4trace:configure.ac:1587: -1- m4_pattern_allow([^pid_t$])
-m4trace:configure.ac:1588: -1- m4_pattern_allow([^uid_t$])
-m4trace:configure.ac:1588: -1- m4_pattern_allow([^gid_t$])
-m4trace:configure.ac:1589: -1- m4_pattern_allow([^TM_IN_SYS_TIME$])
-m4trace:configure.ac:1591: -1- m4_pattern_allow([^HAVE_UNION_WAIT$])
-m4trace:configure.ac:1593: -1- m4_pattern_allow([^HAVE_STDINT_H$])
-m4trace:configure.ac:1593: -1- m4_pattern_allow([^HAVE_INTTYPES_H$])
-m4trace:configure.ac:1593: -1- m4_pattern_allow([^HAVE_SYS_TYPES_H$])
-m4trace:configure.ac:1593: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_SHORT$])
-m4trace:configure.ac:1593: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_INT$])
-m4trace:configure.ac:1610: -1- m4_pattern_allow([^UINT16$])
-m4trace:configure.ac:1612: -1- m4_pattern_allow([^HAVE_STDINT_H$])
-m4trace:configure.ac:1612: -1- m4_pattern_allow([^HAVE_INTTYPES_H$])
-m4trace:configure.ac:1612: -1- m4_pattern_allow([^HAVE_SYS_TYPES_H$])
-m4trace:configure.ac:1612: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_INT$])
-m4trace:configure.ac:1612: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_LONG$])
-m4trace:configure.ac:1629: -1- m4_pattern_allow([^UINT32$])
-m4trace:configure.ac:1647: -1- m4_pattern_allow([^qsort_t$])
-m4trace:configure.ac:1651: -1- m4_pattern_allow([^SELECT_TYPE_ARG1$])
-m4trace:configure.ac:1651: -1- m4_pattern_allow([^SELECT_TYPE_ARG234$])
-m4trace:configure.ac:1651: -1- m4_pattern_allow([^SELECT_TYPE_ARG5$])
-m4trace:configure.ac:1653: -1- m4_pattern_allow([^HAVE_STRCOLL$])
-m4trace:configure.ac:1657: -1- m4_pattern_allow([^HAVE_VFORK_H$])
-m4trace:configure.ac:1657: -1- m4_pattern_allow([^HAVE_WORKING_VFORK$])
-m4trace:configure.ac:1657: -1- m4_pattern_allow([^vfork$])
-m4trace:configure.ac:1657: -1- m4_pattern_allow([^HAVE_WORKING_FORK$])
-m4trace:configure.ac:1704: -1- m4_pattern_allow([^POSIX_SIGNALS$])
-m4trace:configure.ac:1704: -1- m4_pattern_allow([^SYSV_SIGNALS$])
-m4trace:configure.ac:1715: -1- m4_pattern_allow([^HAVE_SYSLOG$])
-m4trace:configure.ac:1737: -1- m4_pattern_allow([^SYSTYPE$])
-m4trace:configure.ac:1738: -1- m4_pattern_allow([^C_FILESEP$])
-m4trace:configure.ac:1739: -1- m4_pattern_allow([^S_FILESEP$])
-m4trace:configure.ac:1740: -1- m4_pattern_allow([^MAILDIR$])
-m4trace:configure.ac:1741: -1- m4_pattern_allow([^MODE_READONLY$])
-m4trace:configure.ac:1744: -1- m4_pattern_allow([^C_CLIENT_TARGET$])
-m4trace:configure.ac:1745: -1- m4_pattern_allow([^C_CLIENT_WITH_IPV6$])
-m4trace:configure.ac:1762: -1- m4_pattern_allow([^SMIME$])
-m4trace:configure.ac:1763: -1- m4_pattern_allow([^SMIME_SSLCERTS$])
-m4trace:configure.ac:1815: -1- m4_pattern_allow([^C_CLIENT_CFLAGS$])
-m4trace:configure.ac:1826: -1- m4_pattern_allow([^C_CLIENT_LDFLAGS$])
-m4trace:configure.ac:1830: -1- m4_pattern_allow([^C_CLIENT_GCCOPTLEVEL$])
-m4trace:configure.ac:1833: -1- m4_pattern_allow([^C_CLIENT_SPECIALS$])
-m4trace:configure.ac:1853: -1- m4_pattern_allow([^PUBCOOKIE$])
-m4trace:configure.ac:1860: -1- m4_pattern_allow([^REGEX_BUILD$])
-m4trace:configure.ac:1862: -1- m4_pattern_allow([^WEB_BUILD$])
-m4trace:configure.ac:1863: -1- m4_pattern_allow([^WEB_BINDIR$])
-m4trace:configure.ac:1864: -1- m4_pattern_allow([^WEB_PUBCOOKIE_BUILD$])
-m4trace:configure.ac:1865: -1- m4_pattern_allow([^WEB_PUBCOOKIE_LIB$])
-m4trace:configure.ac:1866: -1- m4_pattern_allow([^WEB_PUBCOOKIE_LINK$])
-m4trace:configure.ac:1868: -1- m4_pattern_allow([^AM_CFLAGS$])
-m4trace:configure.ac:1869: -1- m4_pattern_allow([^AM_LDFLAGS$])
-m4trace:configure.ac:1878: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:1878: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:1878: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:1878: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:1878: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:1878: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:1878: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:1878: -2- m4_include([VERSION])
-m4trace:configure.ac:1878: -2- _m4_warn([syntax], [file `VERSION' Included several times], [])
-m4trace:configure.ac:1878: -2- m4_include([VERSION])
-m4trace:configure.ac:1878: -2- _m4_warn([syntax], [file `VERSION' Included several times], [])
-m4trace:configure.ac:1878: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
-m4trace:configure.ac:1878: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
-m4trace:configure.ac:1878: -1- _LT_PROG_LTMAIN
+m4trace:configure.ac:1586: -1- m4_pattern_allow([^RETSIGTYPE$])
+m4trace:configure.ac:1589: -1- m4_pattern_allow([^size_t$])
+m4trace:configure.ac:1590: -1- m4_pattern_allow([^mode_t$])
+m4trace:configure.ac:1591: -1- m4_pattern_allow([^pid_t$])
+m4trace:configure.ac:1592: -1- m4_pattern_allow([^uid_t$])
+m4trace:configure.ac:1592: -1- m4_pattern_allow([^gid_t$])
+m4trace:configure.ac:1593: -1- m4_pattern_allow([^TM_IN_SYS_TIME$])
+m4trace:configure.ac:1595: -1- m4_pattern_allow([^HAVE_UNION_WAIT$])
+m4trace:configure.ac:1597: -1- m4_pattern_allow([^HAVE_STDINT_H$])
+m4trace:configure.ac:1597: -1- m4_pattern_allow([^HAVE_INTTYPES_H$])
+m4trace:configure.ac:1597: -1- m4_pattern_allow([^HAVE_SYS_TYPES_H$])
+m4trace:configure.ac:1597: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_SHORT$])
+m4trace:configure.ac:1597: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_INT$])
+m4trace:configure.ac:1614: -1- m4_pattern_allow([^UINT16$])
+m4trace:configure.ac:1616: -1- m4_pattern_allow([^HAVE_STDINT_H$])
+m4trace:configure.ac:1616: -1- m4_pattern_allow([^HAVE_INTTYPES_H$])
+m4trace:configure.ac:1616: -1- m4_pattern_allow([^HAVE_SYS_TYPES_H$])
+m4trace:configure.ac:1616: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_INT$])
+m4trace:configure.ac:1616: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_LONG$])
+m4trace:configure.ac:1633: -1- m4_pattern_allow([^UINT32$])
+m4trace:configure.ac:1651: -1- m4_pattern_allow([^qsort_t$])
+m4trace:configure.ac:1655: -1- m4_pattern_allow([^SELECT_TYPE_ARG1$])
+m4trace:configure.ac:1655: -1- m4_pattern_allow([^SELECT_TYPE_ARG234$])
+m4trace:configure.ac:1655: -1- m4_pattern_allow([^SELECT_TYPE_ARG5$])
+m4trace:configure.ac:1657: -1- m4_pattern_allow([^HAVE_STRCOLL$])
+m4trace:configure.ac:1661: -1- m4_pattern_allow([^HAVE_VFORK_H$])
+m4trace:configure.ac:1661: -1- m4_pattern_allow([^HAVE_WORKING_VFORK$])
+m4trace:configure.ac:1661: -1- m4_pattern_allow([^vfork$])
+m4trace:configure.ac:1661: -1- m4_pattern_allow([^HAVE_WORKING_FORK$])
+m4trace:configure.ac:1708: -1- m4_pattern_allow([^POSIX_SIGNALS$])
+m4trace:configure.ac:1708: -1- m4_pattern_allow([^SYSV_SIGNALS$])
+m4trace:configure.ac:1719: -1- m4_pattern_allow([^HAVE_SYSLOG$])
+m4trace:configure.ac:1741: -1- m4_pattern_allow([^SYSTYPE$])
+m4trace:configure.ac:1742: -1- m4_pattern_allow([^C_FILESEP$])
+m4trace:configure.ac:1743: -1- m4_pattern_allow([^S_FILESEP$])
+m4trace:configure.ac:1744: -1- m4_pattern_allow([^MAILDIR$])
+m4trace:configure.ac:1745: -1- m4_pattern_allow([^MODE_READONLY$])
+m4trace:configure.ac:1748: -1- m4_pattern_allow([^C_CLIENT_TARGET$])
+m4trace:configure.ac:1749: -1- m4_pattern_allow([^C_CLIENT_WITH_IPV6$])
+m4trace:configure.ac:1768: -1- m4_pattern_allow([^SMIME$])
+m4trace:configure.ac:1769: -1- m4_pattern_allow([^SMIME_SSLCERTS$])
+m4trace:configure.ac:1821: -1- m4_pattern_allow([^C_CLIENT_CFLAGS$])
+m4trace:configure.ac:1832: -1- m4_pattern_allow([^C_CLIENT_LDFLAGS$])
+m4trace:configure.ac:1836: -1- m4_pattern_allow([^C_CLIENT_GCCOPTLEVEL$])
+m4trace:configure.ac:1839: -1- m4_pattern_allow([^C_CLIENT_SPECIALS$])
+m4trace:configure.ac:1859: -1- m4_pattern_allow([^PUBCOOKIE$])
+m4trace:configure.ac:1866: -1- m4_pattern_allow([^REGEX_BUILD$])
+m4trace:configure.ac:1868: -1- m4_pattern_allow([^WEB_BUILD$])
+m4trace:configure.ac:1869: -1- m4_pattern_allow([^WEB_BINDIR$])
+m4trace:configure.ac:1870: -1- m4_pattern_allow([^WEB_PUBCOOKIE_BUILD$])
+m4trace:configure.ac:1871: -1- m4_pattern_allow([^WEB_PUBCOOKIE_LIB$])
+m4trace:configure.ac:1872: -1- m4_pattern_allow([^WEB_PUBCOOKIE_LINK$])
+m4trace:configure.ac:1874: -1- m4_pattern_allow([^AM_CFLAGS$])
+m4trace:configure.ac:1875: -1- m4_pattern_allow([^AM_LDFLAGS$])
+m4trace:configure.ac:1884: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:1884: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:1884: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:1884: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:1884: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:1884: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:1884: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:1884: -2- m4_include([VERSION])
+m4trace:configure.ac:1884: -2- _m4_warn([syntax], [file `VERSION' Included several times], [])
+m4trace:configure.ac:1884: -2- m4_include([VERSION])
+m4trace:configure.ac:1884: -2- _m4_warn([syntax], [file `VERSION' Included several times], [])
+m4trace:configure.ac:1884: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
+m4trace:configure.ac:1884: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:1884: -1- _LT_PROG_LTMAIN
