--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -5471,15 +5471,16 @@ m4trace:configure.ac:1253: -1- m4_pattern_allow([^HAS_TERMINFO$])
 m4trace:configure.ac:1256: -1- m4_pattern_allow([^HAS_TERMCAP$])
 m4trace:configure.ac:1286: -1- _m4_warn([cross], [AC_RUN_IFELSE called without default to allow cross compiling], [../../lib/autoconf/general.m4:2748: AC_RUN_IFELSE is expanded from...
 configure.ac:1286: the top level])
-m4trace:configure.ac:1328: -1- m4_pattern_allow([^ENABLE_LDAP$])
-m4trace:configure.ac:1333: -1- m4_pattern_allow([^LDAP_DEPRECATED$])
-m4trace:configure.ac:1442: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2777: AC_CHECK_FILE is expanded from...
+m4trace:configure.ac:1306: -1- m4_pattern_allow([^SSL_SUPPORTS_TLSV1_2$])
+m4trace:configure.ac:1332: -1- m4_pattern_allow([^ENABLE_LDAP$])
+m4trace:configure.ac:1337: -1- m4_pattern_allow([^LDAP_DEPRECATED$])
+m4trace:configure.ac:1446: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2777: AC_CHECK_FILE is expanded from...
 ../../lib/m4sugar/m4sh.m4:639: AS_IF is expanded from...
 ../../lib/autoconf/headers.m4:129: _AC_CHECK_HEADER_MONGREL is expanded from...
 ../../lib/autoconf/headers.m4:67: AC_CHECK_HEADER is expanded from...
-configure.ac:1442: the top level])
-m4trace:configure.ac:1488: -1- m4_pattern_allow([^HAVE_REGEX_H$])
-m4trace:configure.ac:1498: -1- ACX_PTHREAD([
+configure.ac:1446: the top level])
+m4trace:configure.ac:1492: -1- m4_pattern_allow([^HAVE_REGEX_H$])
+m4trace:configure.ac:1502: -1- ACX_PTHREAD([
       AC_MSG_RESULT([yes])
       case "$target" in
 	  *openbsd*)
@@ -5494,111 +5495,111 @@ m4trace:configure.ac:1498: -1- ACX_PTHREAD([
     ], [
       AC_MSG_RESULT([no])
     ])
-m4trace:configure.ac:1498: -1- _m4_warn([obsolete], [The macro `AC_LANG_SAVE' is obsolete.
+m4trace:configure.ac:1502: -1- _m4_warn([obsolete], [The macro `AC_LANG_SAVE' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/lang.m4:125: AC_LANG_SAVE is expanded from...
 m4/acx_pthread.m4:49: ACX_PTHREAD is expanded from...
-configure.ac:1498: the top level])
-m4trace:configure.ac:1498: -1- _m4_warn([obsolete], [The macro `AC_LANG_C' is obsolete.
+configure.ac:1502: the top level])
+m4trace:configure.ac:1502: -1- _m4_warn([obsolete], [The macro `AC_LANG_C' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/c.m4:72: AC_LANG_C is expanded from...
 m4/acx_pthread.m4:49: ACX_PTHREAD is expanded from...
-configure.ac:1498: the top level])
-m4trace:configure.ac:1498: -1- m4_pattern_allow([^acx_pthread_config$])
-m4trace:configure.ac:1498: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
+configure.ac:1502: the top level])
+m4trace:configure.ac:1502: -1- m4_pattern_allow([^acx_pthread_config$])
+m4trace:configure.ac:1502: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:2687: AC_TRY_LINK is expanded from...
 m4/acx_pthread.m4:49: ACX_PTHREAD is expanded from...
-configure.ac:1498: the top level])
-m4trace:configure.ac:1498: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
+configure.ac:1502: the top level])
+m4trace:configure.ac:1502: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:2687: AC_TRY_LINK is expanded from...
 m4/acx_pthread.m4:49: ACX_PTHREAD is expanded from...
-configure.ac:1498: the top level])
-m4trace:configure.ac:1498: -1- m4_pattern_allow([^PTHREAD_CREATE_JOINABLE$])
-m4trace:configure.ac:1498: -1- m4_pattern_allow([^PTHREAD_CC$])
-m4trace:configure.ac:1498: -1- m4_pattern_allow([^PTHREAD_LIBS$])
-m4trace:configure.ac:1498: -1- m4_pattern_allow([^PTHREAD_CFLAGS$])
-m4trace:configure.ac:1498: -1- m4_pattern_allow([^PTHREAD_CC$])
-m4trace:configure.ac:1498: -2- m4_pattern_allow([^HAVE_PTHREAD$])
-m4trace:configure.ac:1498: -1- m4_pattern_allow([^HAVE_PTHREAD$])
-m4trace:configure.ac:1498: -1- _m4_warn([obsolete], [The macro `AC_LANG_RESTORE' is obsolete.
+configure.ac:1502: the top level])
+m4trace:configure.ac:1502: -1- m4_pattern_allow([^PTHREAD_CREATE_JOINABLE$])
+m4trace:configure.ac:1502: -1- m4_pattern_allow([^PTHREAD_CC$])
+m4trace:configure.ac:1502: -1- m4_pattern_allow([^PTHREAD_LIBS$])
+m4trace:configure.ac:1502: -1- m4_pattern_allow([^PTHREAD_CFLAGS$])
+m4trace:configure.ac:1502: -1- m4_pattern_allow([^PTHREAD_CC$])
+m4trace:configure.ac:1502: -2- m4_pattern_allow([^HAVE_PTHREAD$])
+m4trace:configure.ac:1502: -1- m4_pattern_allow([^HAVE_PTHREAD$])
+m4trace:configure.ac:1502: -1- _m4_warn([obsolete], [The macro `AC_LANG_RESTORE' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/lang.m4:134: AC_LANG_RESTORE is expanded from...
 m4/acx_pthread.m4:49: ACX_PTHREAD is expanded from...
-configure.ac:1498: the top level])
-m4trace:configure.ac:1516: -1- m4_pattern_allow([^HAVE_NANOSLEEP$])
-m4trace:configure.ac:1526: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.ac:1528: -1- m4_pattern_allow([^STAT_MACROS_BROKEN$])
-m4trace:configure.ac:1529: -1- m4_pattern_allow([^HAVE_SYS_WAIT_H$])
-m4trace:configure.ac:1530: -1- m4_pattern_allow([^TIME_WITH_SYS_TIME$])
-m4trace:configure.ac:1531: -1- m4_pattern_allow([^GWINSZ_IN_SYS_IOCTL$])
-m4trace:configure.ac:1533: -1- m4_pattern_allow([^HAVE_UNISTD_H$])
-m4trace:configure.ac:1562: -2- m4_pattern_allow([^HAS_TERMIOS$])
-m4trace:configure.ac:1561: -2- m4_pattern_allow([^HAS_TERMIO$])
-m4trace:configure.ac:1561: -2- m4_pattern_allow([^HAS_SGTTY$])
-m4trace:configure.ac:1578: -1- _m4_warn([obsolete], [your code may safely assume C89 semantics that RETSIGTYPE is void.
+configure.ac:1502: the top level])
+m4trace:configure.ac:1520: -1- m4_pattern_allow([^HAVE_NANOSLEEP$])
+m4trace:configure.ac:1530: -1- m4_pattern_allow([^STDC_HEADERS$])
+m4trace:configure.ac:1532: -1- m4_pattern_allow([^STAT_MACROS_BROKEN$])
+m4trace:configure.ac:1533: -1- m4_pattern_allow([^HAVE_SYS_WAIT_H$])
+m4trace:configure.ac:1534: -1- m4_pattern_allow([^TIME_WITH_SYS_TIME$])
+m4trace:configure.ac:1535: -1- m4_pattern_allow([^GWINSZ_IN_SYS_IOCTL$])
+m4trace:configure.ac:1537: -1- m4_pattern_allow([^HAVE_UNISTD_H$])
+m4trace:configure.ac:1566: -2- m4_pattern_allow([^HAS_TERMIOS$])
+m4trace:configure.ac:1565: -2- m4_pattern_allow([^HAS_TERMIO$])
+m4trace:configure.ac:1565: -2- m4_pattern_allow([^HAS_SGTTY$])
+m4trace:configure.ac:1582: -1- _m4_warn([obsolete], [your code may safely assume C89 semantics that RETSIGTYPE is void.
 Remove this warning and the `AC_CACHE_CHECK' when you adjust the code.], [])
-m4trace:configure.ac:1587: -1- m4_pattern_allow([^RETSIGTYPE$])
-m4trace:configure.ac:1590: -1- m4_pattern_allow([^size_t$])
-m4trace:configure.ac:1591: -1- m4_pattern_allow([^mode_t$])
-m4trace:configure.ac:1592: -1- m4_pattern_allow([^pid_t$])
-m4trace:configure.ac:1593: -1- m4_pattern_allow([^uid_t$])
-m4trace:configure.ac:1593: -1- m4_pattern_allow([^gid_t$])
-m4trace:configure.ac:1594: -1- m4_pattern_allow([^TM_IN_SYS_TIME$])
-m4trace:configure.ac:1596: -1- m4_pattern_allow([^HAVE_UNION_WAIT$])
-m4trace:configure.ac:1598: -1- m4_pattern_allow([^HAVE_STDINT_H$])
-m4trace:configure.ac:1598: -1- m4_pattern_allow([^HAVE_INTTYPES_H$])
-m4trace:configure.ac:1598: -1- m4_pattern_allow([^HAVE_SYS_TYPES_H$])
-m4trace:configure.ac:1598: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_SHORT$])
-m4trace:configure.ac:1598: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_INT$])
-m4trace:configure.ac:1615: -1- m4_pattern_allow([^UINT16$])
-m4trace:configure.ac:1617: -1- m4_pattern_allow([^HAVE_STDINT_H$])
-m4trace:configure.ac:1617: -1- m4_pattern_allow([^HAVE_INTTYPES_H$])
-m4trace:configure.ac:1617: -1- m4_pattern_allow([^HAVE_SYS_TYPES_H$])
-m4trace:configure.ac:1617: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_INT$])
-m4trace:configure.ac:1617: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_LONG$])
-m4trace:configure.ac:1634: -1- m4_pattern_allow([^UINT32$])
-m4trace:configure.ac:1652: -1- m4_pattern_allow([^qsort_t$])
-m4trace:configure.ac:1656: -1- m4_pattern_allow([^SELECT_TYPE_ARG1$])
-m4trace:configure.ac:1656: -1- m4_pattern_allow([^SELECT_TYPE_ARG234$])
-m4trace:configure.ac:1656: -1- m4_pattern_allow([^SELECT_TYPE_ARG5$])
-m4trace:configure.ac:1658: -1- m4_pattern_allow([^HAVE_STRCOLL$])
-m4trace:configure.ac:1662: -1- m4_pattern_allow([^HAVE_VFORK_H$])
-m4trace:configure.ac:1662: -1- m4_pattern_allow([^HAVE_WORKING_VFORK$])
-m4trace:configure.ac:1662: -1- m4_pattern_allow([^vfork$])
-m4trace:configure.ac:1662: -1- m4_pattern_allow([^HAVE_WORKING_FORK$])
-m4trace:configure.ac:1709: -1- m4_pattern_allow([^POSIX_SIGNALS$])
-m4trace:configure.ac:1709: -1- m4_pattern_allow([^SYSV_SIGNALS$])
-m4trace:configure.ac:1720: -1- m4_pattern_allow([^HAVE_SYSLOG$])
-m4trace:configure.ac:1742: -1- m4_pattern_allow([^SYSTYPE$])
-m4trace:configure.ac:1743: -1- m4_pattern_allow([^C_FILESEP$])
-m4trace:configure.ac:1744: -1- m4_pattern_allow([^S_FILESEP$])
-m4trace:configure.ac:1745: -1- m4_pattern_allow([^MAILDIR$])
-m4trace:configure.ac:1746: -1- m4_pattern_allow([^MODE_READONLY$])
-m4trace:configure.ac:1749: -1- m4_pattern_allow([^C_CLIENT_TARGET$])
-m4trace:configure.ac:1750: -1- m4_pattern_allow([^C_CLIENT_WITH_IPV6$])
-m4trace:configure.ac:1769: -1- m4_pattern_allow([^SMIME$])
-m4trace:configure.ac:1770: -1- m4_pattern_allow([^SMIME_SSLCERTS$])
-m4trace:configure.ac:1822: -1- m4_pattern_allow([^C_CLIENT_CFLAGS$])
-m4trace:configure.ac:1833: -1- m4_pattern_allow([^C_CLIENT_LDFLAGS$])
-m4trace:configure.ac:1837: -1- m4_pattern_allow([^C_CLIENT_GCCOPTLEVEL$])
-m4trace:configure.ac:1840: -1- m4_pattern_allow([^C_CLIENT_SPECIALS$])
-m4trace:configure.ac:1860: -1- m4_pattern_allow([^PUBCOOKIE$])
-m4trace:configure.ac:1867: -1- m4_pattern_allow([^REGEX_BUILD$])
-m4trace:configure.ac:1869: -1- m4_pattern_allow([^WEB_BUILD$])
-m4trace:configure.ac:1870: -1- m4_pattern_allow([^WEB_BINDIR$])
-m4trace:configure.ac:1871: -1- m4_pattern_allow([^WEB_PUBCOOKIE_BUILD$])
-m4trace:configure.ac:1872: -1- m4_pattern_allow([^WEB_PUBCOOKIE_LIB$])
-m4trace:configure.ac:1873: -1- m4_pattern_allow([^WEB_PUBCOOKIE_LINK$])
-m4trace:configure.ac:1875: -1- m4_pattern_allow([^AM_CFLAGS$])
-m4trace:configure.ac:1876: -1- m4_pattern_allow([^AM_LDFLAGS$])
-m4trace:configure.ac:1885: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:1885: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:1885: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:1885: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:1885: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:1885: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:1885: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:1885: -2- m4_include([VERSION])
-m4trace:configure.ac:1885: -2- _m4_warn([syntax], [file `VERSION' Included several times], [])
-m4trace:configure.ac:1885: -2- m4_include([VERSION])
-m4trace:configure.ac:1885: -2- _m4_warn([syntax], [file `VERSION' Included several times], [])
-m4trace:configure.ac:1885: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
-m4trace:configure.ac:1885: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
-m4trace:configure.ac:1885: -1- _LT_PROG_LTMAIN
+m4trace:configure.ac:1591: -1- m4_pattern_allow([^RETSIGTYPE$])
+m4trace:configure.ac:1594: -1- m4_pattern_allow([^size_t$])
+m4trace:configure.ac:1595: -1- m4_pattern_allow([^mode_t$])
+m4trace:configure.ac:1596: -1- m4_pattern_allow([^pid_t$])
+m4trace:configure.ac:1597: -1- m4_pattern_allow([^uid_t$])
+m4trace:configure.ac:1597: -1- m4_pattern_allow([^gid_t$])
+m4trace:configure.ac:1598: -1- m4_pattern_allow([^TM_IN_SYS_TIME$])
+m4trace:configure.ac:1600: -1- m4_pattern_allow([^HAVE_UNION_WAIT$])
+m4trace:configure.ac:1602: -1- m4_pattern_allow([^HAVE_STDINT_H$])
+m4trace:configure.ac:1602: -1- m4_pattern_allow([^HAVE_INTTYPES_H$])
+m4trace:configure.ac:1602: -1- m4_pattern_allow([^HAVE_SYS_TYPES_H$])
+m4trace:configure.ac:1602: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_SHORT$])
+m4trace:configure.ac:1602: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_INT$])
+m4trace:configure.ac:1619: -1- m4_pattern_allow([^UINT16$])
+m4trace:configure.ac:1621: -1- m4_pattern_allow([^HAVE_STDINT_H$])
+m4trace:configure.ac:1621: -1- m4_pattern_allow([^HAVE_INTTYPES_H$])
+m4trace:configure.ac:1621: -1- m4_pattern_allow([^HAVE_SYS_TYPES_H$])
+m4trace:configure.ac:1621: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_INT$])
+m4trace:configure.ac:1621: -1- m4_pattern_allow([^SIZEOF_UNSIGNED_LONG$])
+m4trace:configure.ac:1638: -1- m4_pattern_allow([^UINT32$])
+m4trace:configure.ac:1656: -1- m4_pattern_allow([^qsort_t$])
+m4trace:configure.ac:1660: -1- m4_pattern_allow([^SELECT_TYPE_ARG1$])
+m4trace:configure.ac:1660: -1- m4_pattern_allow([^SELECT_TYPE_ARG234$])
+m4trace:configure.ac:1660: -1- m4_pattern_allow([^SELECT_TYPE_ARG5$])
+m4trace:configure.ac:1662: -1- m4_pattern_allow([^HAVE_STRCOLL$])
+m4trace:configure.ac:1666: -1- m4_pattern_allow([^HAVE_VFORK_H$])
+m4trace:configure.ac:1666: -1- m4_pattern_allow([^HAVE_WORKING_VFORK$])
+m4trace:configure.ac:1666: -1- m4_pattern_allow([^vfork$])
+m4trace:configure.ac:1666: -1- m4_pattern_allow([^HAVE_WORKING_FORK$])
+m4trace:configure.ac:1713: -1- m4_pattern_allow([^POSIX_SIGNALS$])
+m4trace:configure.ac:1713: -1- m4_pattern_allow([^SYSV_SIGNALS$])
+m4trace:configure.ac:1724: -1- m4_pattern_allow([^HAVE_SYSLOG$])
+m4trace:configure.ac:1746: -1- m4_pattern_allow([^SYSTYPE$])
+m4trace:configure.ac:1747: -1- m4_pattern_allow([^C_FILESEP$])
+m4trace:configure.ac:1748: -1- m4_pattern_allow([^S_FILESEP$])
+m4trace:configure.ac:1749: -1- m4_pattern_allow([^MAILDIR$])
+m4trace:configure.ac:1750: -1- m4_pattern_allow([^MODE_READONLY$])
+m4trace:configure.ac:1753: -1- m4_pattern_allow([^C_CLIENT_TARGET$])
+m4trace:configure.ac:1754: -1- m4_pattern_allow([^C_CLIENT_WITH_IPV6$])
+m4trace:configure.ac:1773: -1- m4_pattern_allow([^SMIME$])
+m4trace:configure.ac:1774: -1- m4_pattern_allow([^SMIME_SSLCERTS$])
+m4trace:configure.ac:1826: -1- m4_pattern_allow([^C_CLIENT_CFLAGS$])
+m4trace:configure.ac:1837: -1- m4_pattern_allow([^C_CLIENT_LDFLAGS$])
+m4trace:configure.ac:1841: -1- m4_pattern_allow([^C_CLIENT_GCCOPTLEVEL$])
+m4trace:configure.ac:1844: -1- m4_pattern_allow([^C_CLIENT_SPECIALS$])
+m4trace:configure.ac:1864: -1- m4_pattern_allow([^PUBCOOKIE$])
+m4trace:configure.ac:1871: -1- m4_pattern_allow([^REGEX_BUILD$])
+m4trace:configure.ac:1873: -1- m4_pattern_allow([^WEB_BUILD$])
+m4trace:configure.ac:1874: -1- m4_pattern_allow([^WEB_BINDIR$])
+m4trace:configure.ac:1875: -1- m4_pattern_allow([^WEB_PUBCOOKIE_BUILD$])
+m4trace:configure.ac:1876: -1- m4_pattern_allow([^WEB_PUBCOOKIE_LIB$])
+m4trace:configure.ac:1877: -1- m4_pattern_allow([^WEB_PUBCOOKIE_LINK$])
+m4trace:configure.ac:1879: -1- m4_pattern_allow([^AM_CFLAGS$])
+m4trace:configure.ac:1880: -1- m4_pattern_allow([^AM_LDFLAGS$])
+m4trace:configure.ac:1889: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:1889: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:1889: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:1889: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:1889: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:1889: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:1889: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:1889: -2- m4_include([VERSION])
+m4trace:configure.ac:1889: -2- _m4_warn([syntax], [file `VERSION' Included several times], [])
+m4trace:configure.ac:1889: -2- m4_include([VERSION])
+m4trace:configure.ac:1889: -2- _m4_warn([syntax], [file `VERSION' Included several times], [])
+m4trace:configure.ac:1889: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
+m4trace:configure.ac:1889: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:1889: -1- _LT_PROG_LTMAIN
