* Add .pine-crash to man page.
   * Add backward search support for Pico and file browser.

   * Style tag in html body causes all text to disappear until we find
     a </style> tag.

   * Shorten name of temporary file for a mailcap command.

--- a/doc/alpine.1
+++ b/doc/alpine.1
@@ -295,6 +295,8 @@ uses the following environment variables:
 .br
 ~/.pinerc	Personal alpine config file.
 .br
+~/.pine-crash	Debug information useful to debug a crash.
+.br
 ~/.newsrc	News subscription/state file.
 .br
 ~/.mailcap	Personal mail capabilities file.
