* Fixes bug in 2.19.8 that would make Alpine fail to build in Windows.
   * S/MIME configuration screen would deinitialize smime, not allowing
     it to send encrypted or signed messages.

   * Add documentation for /loser option in definition of external servers.

   * crashing bug in certificate management screen due to a BIO_free() call
     of memory that had not been allocated.

   * When the password file is decrypted, smime is inited. If smime is inited
     before the .pinerc is read, some values might not be correctly set.

   * When a password file exists, and S/MIME is enabled, encrypt it by either
     using an existing key/certificate pair. The key is saved separately
     in ~/.alpine-smime/.pwd, or in the directory specified by the
     -pwdcertdir command line option.

--- a/README
+++ b/README
@@ -55,7 +55,7 @@ If you are reading this, you have presumably succeeded in extracting
 the distribution from the compressed tar archive file, via the
 following command, or equivalent:
 
-        tar --xz -xf alpine.tar.xz
+        tar -Jxf alpine.tar.xz
 
 Some of the instructions that follow assume that your current working
 directory is the alpine-X.XX directory created by the un-tar process
