--- a/packages/README
+++ b/packages/README
@@ -1,10 +1,9 @@
-Last changed: 06 Apr 2007
+Last changed: 09 July 2016
 
 Building packages for Alpine
 
 Files in this directory:
-  alpine.spec - spec file for building RPMs on RedHat and Fedora.
-		It should also work with Mandrake.
+  alpine.spec - spec file for building RPMs on RedHat, Fedora and OpenSuse.
   debian/*    - files containing instructions for building .deb files
                 for use with dpkg
   windows/*   - files used to build the Windows Alpine installer. Upon
@@ -54,7 +53,7 @@ The RPM file will be placed in the RPMS directory, and a source RPM
 will be placed in the SRPMS directory.  Installing an RPM is done with
 the command:
 
-rpm -ivh alpine-{version}-1.i386.rpm
+rpm -ivh alpine-{version}-1.x86_64.rpm
 
 
 Building .deb files:
