* Corrections to pico manual contributed by Dennis Davis.

--- a/doc/man1/pico.1
+++ b/doc/man1/pico.1
@@ -1,4 +1,4 @@
-.TH pico 1 "Version 5.07"
+.TH pico 1 "Version 5.08"
 .SH Name
 pico \- simple text editor in the style of the Alpine Composer
 .SH Syntax
@@ -162,7 +162,7 @@ for black, so in order to configure a black color, one must use its code, the
 number 0.
 .PP
 In order to activate colors, one must use the option -ncolors with a numerical
-value indicating the number of colors tht your teminal supports, for example,
+value indicating the number of colors that your terminal supports, for example,
 \fI-ncolors 256\fR indicates that the user wishes to use a table of 256 colors.
 .PP
 All options that control color, are four letter options. Their last two 
